Refresh plugin for August 2023