@@ -5,7 +5,7 @@
   <parent>
     <groupId>org.jenkins-ci.plugins</groupId>
     <artifactId>plugin</artifactId>
-    <version>4.31</version>
+    <version>4.72</version>
     <relativePath />
   </parent>
 
@@ -17,13 +17,10 @@
   <properties>
     <revision>2.7.2</revision>
     <changelist>-SNAPSHOT</changelist>
-    <jenkins.version>2.277.2</jenkins.version>
-    <java.level>8</java.level>
+    <jenkins.version>2.387.3</jenkins.version>
     <gitHubRepo>jenkinsci/${project.artifactId}-plugin</gitHubRepo>
-    <aws-sdk.version>1.12.101-300.vc09c7be9cb57</aws-sdk.version>
-    <aws-credentials.version>1.32</aws-credentials.version>
-    <mockito.version>3.12.4</mockito.version>
-    <powermock.version>2.0.5</powermock.version>
+    <aws-sdk.version>1.12.529-406.vdeff15e5817d</aws-sdk.version>
+    <aws-credentials.version>191.vcb_f183ce58b_9</aws-credentials.version>
   </properties>
 
   <name>EC2 Fleet Jenkins Plugin</name>
@@ -60,8 +57,8 @@
   </developers>
 
   <scm>
-    <connection>scm:git:https://github.com/${gitHubRepo}</connection>
-    <developerConnection>scm:git:https://github.com/${gitHubRepo}</developerConnection>
+    <connection>scm:git:https://github.com/${gitHubRepo}.git</connection>
+    <developerConnection>scm:git:git@github.com:${gitHubRepo}.git</developerConnection>
     <url>https://github.com/${gitHubRepo}</url>
     <tag>${scmTag}</tag>
   </scm>
@@ -84,8 +81,8 @@
     <dependencies>
       <dependency>
         <groupId>io.jenkins.tools.bom</groupId>
-        <artifactId>bom-2.249.x</artifactId>
-        <version>984.vb5eaac999a7e</version>
+        <artifactId>bom-2.387.x</artifactId>
+        <version>2357.v1043f8578392</version>
         <scope>import</scope>
         <type>pom</type>
       </dependency>
@@ -118,15 +115,8 @@
 
     <!-- tests -->
     <dependency>
-      <groupId>org.powermock</groupId>
-      <artifactId>powermock-module-junit4</artifactId>
-      <version>${powermock.version}</version>
-      <scope>test</scope>
-    </dependency>
-    <dependency>
-      <groupId>org.powermock</groupId>
-      <artifactId>powermock-api-mockito2</artifactId>
-      <version>${powermock.version}</version>
+      <groupId>org.mockito</groupId>
+      <artifactId>mockito-core</artifactId>
       <scope>test</scope>
     </dependency>
     <dependency>
@@ -138,17 +128,6 @@
       <groupId>io.jenkins.configuration-as-code</groupId>
       <artifactId>test-harness</artifactId>
       <scope>test</scope>
-      <!--
-      PCT fails on maven-enforcer-plugin:enforce
-      test-harness:1.46 puts joda-time:2.10.2
-      aws-java-sdk:1.11.821 puts 2.8.1
-      -->
-      <exclusions>
-        <exclusion>
-          <groupId>joda-time</groupId>
-          <artifactId>joda-time</artifactId>
-        </exclusion>
-      </exclusions>
     </dependency>
 
   </dependencies>
@@ -161,10 +140,31 @@
         <extensions>true</extensions>
         <configuration>
           <compatibleSinceVersion>1.45</compatibleSinceVersion>
-          <minimumJavaVersion>8</minimumJavaVersion>
         </configuration>
       </plugin>
     </plugins>
   </build>
 
+  <profiles>
+    <profile>
+      <id>jdk17</id>
+      <activation>
+        <jdk>[17,)</jdk>
+      </activation>
+      <properties />
+      <build>
+        <pluginManagement>
+          <plugins>
+            <plugin>
+              <groupId>org.apache.maven.plugins</groupId>
+              <artifactId>maven-surefire-plugin</artifactId>
+              <configuration>
+                <argLine>-Xms768M -Xmx768M -XX:+HeapDumpOnOutOfMemoryError -XX:+TieredCompilation -XX:TieredStopAtLevel=1 @{jenkins.addOpens} @{jenkins.insaneHook} --add-opens java.base/java.util.concurrent=ALL-UNNAMED --add-opens java.base/java.util.concurrent.locks=ALL-UNNAMED</argLine>
+              </configuration>
+            </plugin>
+          </plugins>
+        </pluginManagement>
+      </build>
+    </profile>
+  </profiles>
 </project>
